--- a/Web/static/css/style2.css
+++ b/Web/static/css/style2.css
@@ -12,10 +12,23 @@ body {
     padding-top: 10%;
   }
 
-nav {
-    color: black;
-    text-decoration: none;
-    cursor: auto;
+.navbar {
+  cursor:  auto;
+  overflow: hidden;
+  float: left;
+  text-align: center;
+  padding-left: 28%;
+  text-decoration: none;
+  font-size: 17px;
+  background-color: black;
+  width: 100%;
+  outline: rgb(255, 255, 255);
+ }
+  
+.navbar a {
+  padding-left: 2%;
+  color: #f7f7f7;
+  font-weight: 800;
 }
 
 .contentBox {
