--- a/Web/static/css/style2.css
+++ b/Web/static/css/style2.css
@@ -24,7 +24,10 @@ body {
   width: 100%;
   outline: rgb(255, 255, 255);
  }
-  
+.navbar li {
+  list-style: none;
+}
+
 .navbar a {
   padding-left: 2%;
   color: #f7f7f7;
