--- a/Web/static/css/style3.css
+++ b/Web/static/css/style3.css
@@ -25,6 +25,10 @@ body {
   outline: rgb(255, 255, 255);
 }
 
+.navbar li {
+  list-style: none;
+}
+
 .navbar a {
   padding-left: 2%;
   color: #f7f7f7;
