--- a/Web/static/css/group.css
+++ b/Web/static/css/group.css
@@ -72,7 +72,7 @@ body {
 
 .btn {
   color: white;
-  background-color: purple;
+  background-color: rgba(65, 58, 168, 0.374);
   height: 50px;
   width: 190px;
   padding: 2px;
@@ -87,7 +87,7 @@ body {
 .nav {
   width: 100vw;
   height: 20vh;
-  background-color: rgb(202, 160, 202);
+  background-color: rgba(176, 117, 191, 0.534);
   font-size: x-large;
   color: white;
   text-align: center;
@@ -100,9 +100,9 @@ body {
 
 .section {
   width: 100vw;
-  height: 40vh;
-  background-color: rgb(96, 96, 230);
-  font-size: 40px;
+  height: 45vh;
+  background-color: rgba(171, 224, 122, 0.239);
+  font-size: 30px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
   text-align: center;
